--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-env": "^7.20.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.2.2",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
